# clore

./: .clang-format  .gitignore  .prettierrc.yaml  CMakeLists.txt  README.md  clore.en.toml  clore.toml  clore.zh.toml  conanfile.py  example.toml  pixi.toml
.github/: dependabot.yml
.github/workflows/: generate-docs.yml  verify-build.yml
cmake/: llvm.cmake  package.cmake  toolchain.cmake
docs/en/: index.md
docs/en/modules/agent/: index.md  tools.md
docs/en/modules/anthropic/: index.md
docs/en/modules/anthropic/functions/: append-text-with-gap.md  build-messages-url.md
docs/en/modules/client/: index.md
docs/en/modules/client/functions/: select-event-loop.md
docs/en/modules/config/: index.md  load.md  normalize.md  schema.md  validate.md
docs/en/modules/extract/: ast.md  cache.md  compiler.md  filter.md  index.md  merge.md  model.md  scan.md
docs/en/modules/extract/functions/: ensure-cache-key-impl.md  ensure-cache-key.md  normalize-entry-file.md  scan-module-decl.md
docs/en/modules/generate/: analysis.md  cache.md  common.md  diagram.md  dryrun.md  evidence.md  index.md  markdown.md  model.md  page.md  planner.md  scheduler.md  symbol.md
docs/en/modules/generate/functions/: normalize-text-for-hashing.md
docs/en/modules/http/: index.md
docs/en/modules/network/: index.md
docs/en/modules/openai/: index.md
docs/en/modules/protocol/: index.md
docs/en/modules/protocol/functions/: icontains.md
docs/en/modules/provider/: index.md
docs/en/modules/schema/: index.md
docs/en/modules/support/: index.md
docs/en/modules/support/functions/: ensure-utf8.md  log.md  strip-utf8-bom.md
docs/en/namespaces/clore/: index.md
docs/en/namespaces/clore/agent/: index.md
docs/en/namespaces/clore/config/: index.md
docs/en/namespaces/clore/extract/: index.md
docs/en/namespaces/clore/generate/: index.md
docs/en/namespaces/clore/logging/: index.md
docs/en/namespaces/clore/net/: index.md
docs/en/namespaces/clore/support/: index.md
docs/zh/: index.md  llms.txt
docs/zh/modules/agent/: index.md  tools.md
docs/zh/modules/anthropic/: index.md
docs/zh/modules/anthropic/functions/: append-text-with-gap.md  build-messages-url.md
docs/zh/modules/client/: index.md
docs/zh/modules/client/functions/: select-event-loop.md
docs/zh/modules/config/: index.md  load.md  normalize.md  schema.md  validate.md
docs/zh/modules/extract/: ast.md  cache.md  compiler.md  filter.md  index.md  merge.md  model.md  scan.md
docs/zh/modules/extract/functions/: ensure-cache-key-impl.md  ensure-cache-key.md  normalize-entry-file.md  scan-module-decl.md
docs/zh/modules/generate/: analysis.md  cache.md  common.md  diagram.md  dryrun.md  evidence.md  index.md  markdown.md  model.md  page.md  planner.md  scheduler.md  symbol.md
docs/zh/modules/generate/functions/: normalize-text-for-hashing.md
docs/zh/modules/http/: index.md
docs/zh/modules/network/: index.md
docs/zh/modules/openai/: index.md
docs/zh/modules/protocol/: index.md
docs/zh/modules/protocol/functions/: icontains.md
docs/zh/modules/provider/: index.md
docs/zh/modules/schema/: index.md
docs/zh/modules/support/: index.md
docs/zh/modules/support/functions/: ensure-utf8.md  log.md  strip-utf8-bom.md
docs/zh/namespaces/clore/: index.md
docs/zh/namespaces/clore/agent/: index.md
docs/zh/namespaces/clore/config/: index.md
docs/zh/namespaces/clore/extract/: index.md
docs/zh/namespaces/clore/generate/: index.md
scripts/: setup-llvm.py
src/: CMakeLists.txt  main.cpp
src/agent/: agent.cppm  tools.cppm
src/config/: config.cppm  config.h  load.cpp  load.cppm  load.h  normalize.cpp  normalize.cppm  normalize.h  schema.cppm  schema.h  validate.cpp  validate.cppm  validate.h
src/extract/: ast.cpp  ast.cppm  ast.h  cache.cppm  compdb.cpp  compdb.cppm  compdb.h  compiler.cppm  extract.cpp  extract.cppm  extract.h  filter.cppm  merge.cppm  model.cppm  model.h  qualified_name.cppm  scan.cpp  scan.cppm  scan.h  symbol.cpp  symbol.cppm  symbol.h  tooling.cpp  tooling.cppm  tooling.h
src/generate/: analysis.cppm  bridge.cppm  cache.cppm  dryrun.cppm  evidence.cppm  evidence_builder.cppm  generate.cpp  generate.cppm  generate.h  llm.cpp  llm.cppm  llm.h  markdown.cppm  model.cppm  path.cppm  planner.cppm  prompt.cppm  render.cppm  scheduler.cppm
src/generate/render/: common.cppm  diagram.cppm  page.cppm  symbol.cppm
src/network/: anthropic.cppm  async.cppm  client.cppm  http.cppm  network.cppm  openai.cppm  protocol.cppm  provider.cppm  schema.cppm
src/support/: logging.cpp  logging.cppm  logging.h
templates/pages/: file.md  index.md  module.md  namespace.md  repository.md  type.md  workflow.md
templates/prompts/: function_analysis.txt  function_declaration_summary.txt  function_implementation_summary.txt  index_overview.txt  index_reading_guide.txt  module_architecture.txt  module_summary.txt  namespace_summary.txt  reading_guide.txt  repository_overview.txt  type_analysis.txt  type_declaration_summary.txt  type_implementation_summary.txt  type_overview.txt  type_usage_notes.txt  variable_analysis.txt  workflow.txt
tests/: CMakeLists.txt  unit_tests.cpp
tests/agent/: agent.cpp  tools.cpp
tests/config/: load.cpp  normalize.cpp  schema.cpp  validate.cpp
tests/extract/: ast.cpp  cache.cpp  compdb.h  compiler.cpp  extract.cpp  filter.cpp  merge.cpp  model.cpp  scan.cpp
tests/generate/: analysis.cpp  cache.cpp  diagram.cpp  evidence.cpp  generate.cpp  markdown.cpp  model.cpp  page.cpp  planner.cpp  prelude.h  prompt.cpp  support.h
tests/generate/render/: common.cpp  symbol.cpp
tests/include/test_support/: environment.h
tests/network/: anthropic.cpp  http.cpp  network.cpp  openai.cpp
tests/support/: logging.cpp
tests/unit/config/: config.cpp  config_tests.cpp  validate.cpp  validate_tests.cpp
tests/unit/extract/: ast.cpp  compdb.cpp  compdb.h  extract.cpp  extract_tests.cpp  scan.cpp  scan_tests.cpp  symbol.cpp
tests/unit/generate/: generate.cpp  llm.cpp  llm_tests.cpp  workflow.cpp
tests/unit/network/: http.cpp  llm.cpp
tests/unit/support/: support.cpp
(+58 files in other folders)
