cmake_minimum_required(VERSION 4.3.0)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_MODULE_STD ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_SCAN_FOR_MODULES ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(KOTA_ENABLE_ASYNC ON)
set(KOTA_ENABLE_OPTION ON)
set(KOTA_ENABLE_DECO ON)
set(KOTA_ENABLE_ZEST ON)
set(KOTA_CODEC_ENABLE_SIMDJSON ON)
set(KOTA_CODEC_ENABLE_YYJSON ON)
set(KOTA_CODEC_ENABLE_FLATBUFFERS OFF)
set(KOTA_CODEC_ENABLE_TOML ON)
set(KOTA_ENABLE_EXCEPTIONS ON)
set(KOTA_ENABLE_RTTI ON)
set(KOTA_ENABLE_CCACHE OFF)

project(clore LANGUAGES C CXX)

include(CheckCXXCompilerFlag)
include(CheckLinkerFlag)

if(CMAKE_BUILD_TYPE STREQUAL "Debug" AND
    (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang"))
    add_compile_options(-fno-omit-frame-pointer)
    add_compile_options(-ftrivial-auto-var-init=pattern)
    add_compile_options(-fsanitize=address,undefined)
    add_compile_options(-fno-sanitize-recover=undefined)
    add_link_options(-fsanitize=address,undefined)
endif()

if(CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
    include(CheckIPOSupported)
    check_ipo_supported(RESULT lto_supported OUTPUT lto_error LANGUAGES CXX)

    if(lto_supported)
        if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
            add_compile_options(-flto=auto)
            add_link_options(-flto=auto)
            add_compile_options(-ffat-lto-objects)
            add_compile_options(-fdevirtualize-at-ltrans)
        elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
            add_compile_options(-flto=full)
            add_link_options(-flto=full)
        elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
            add_compile_options(/GL)
            add_link_options(/LTCG)
        endif()
    endif()
endif()

find_package(spdlog REQUIRED)
find_package(CURL REQUIRED)
find_package(simdjson REQUIRED)

add_subdirectory(${KOTATSU})
add_subdirectory(src)
add_subdirectory(tests)